new text cleanup

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 					<div class="box">
 						<h4>FMAbhaya (අභය)</h4>
-						<textarea class="form-control" style="font-family:FMAbhaya!important;" name="abhaya" rows="7"></textarea>
+						<textarea class="form-control" style="font-family:'FMAbhaya X', FMAbhaya, sans-serif!important;" name="abhaya" rows="7"></textarea>
 						<br/>
 					</div>
 				</form>
