added update text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 					</div>
 				</form>
 
-				<p>Smart quotes recommended. Report bugs to malinthe AT gmail DOT com</p>
+				<p>Smart quotes recommended. Report bugs to malinthe AT gmail DOT com
+					<br>Last updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.</p>
 				<hr/>
 
 				<p>Modified for FMAbhaya by
