--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 
 				<p>Smart quotes recommended. Report bugs to malinthe AT gmail DOT com
-					<br>Last updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.</p>
+					<br>Updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.</p>
+					<br>Last updated 23rd October, 2020. Fixed bug with character ​ඳෙ. Thank you <a rel="nofollow" target="_blank" href="https://twitter.com/srishanu">SRIshanu</a></p>
 				<hr/>
 
 				<p>Modified for FMAbhaya by
