--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sandstone/bootstrap.min.css">
-
-	<title>Hello, world!</title>
 </head>
 
 <body onLoad="javascript:converter.unicode.focus()">
@@ -50,8 +48,8 @@
 
 
 				<p>Smart quotes recommended. Report bugs to malinthe AT gmail DOT com
-					<br>Updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.</p>
-					<br>Last updated 23rd October, 2020. Fixed bug with character ​ඳෙ. Thank you <a rel="nofollow" target="_blank" href="https://twitter.com/srishanu">SRIshanu</a></p>
+					<br>Updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.
+					<br/>Last updated 23rd October, 2020. Fixed bug with character ​ඳෙ. Thank you <a rel="nofollow" target="_blank" href="https://twitter.com/srishanu">SRIshanu</a></p>
 				<hr/>
 
 				<p>Modified for FMAbhaya by
