--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Real Time Unicode Converter [Unicode to FMAbhaya]</title>
-	<meta http-equiv="refresh" content="0; url=https://projects.malinthe.com/converter">
 	
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -49,7 +48,8 @@
 
 				<p>Smart quotes recommended. Report bugs to malinthe AT gmail DOT com
 					<br>Updated 9th September, 2018: Added support for ඏ, ඐ and ඦු characters.
-					<br/>Last updated 23rd October, 2020. Fixed bug with character ​ඳෙ. Thank you <a rel="nofollow" target="_blank" href="https://twitter.com/srishanu">SRIshanu</a></p>
+					<br/>Updated 23rd October, 2020. Fixed bug with character ​ඳෙ. Thank you <a rel="nofollow" target="_blank" href="https://twitter.com/srishanu">SRIshanu</a><br/>
+					Last updated 17th January, 2022. Fixed bug with character යෞ. Thank  you Chamuditha Malindu.</p>
 				<hr/>
 
 				<p>Modified for FMAbhaya by
